--- a/PSs/src/main/resources/templates/indexprofessor.html
+++ b/PSs/src/main/resources/templates/indexprofessor.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>Professor Management System</title>
+	<meta charset="ISO-8859-1">
+	<title>Student Management System</title>
 
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-	integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-	crossorigin="anonymous">
-	
+	<link rel="stylesheet"
+		  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+		  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+		  crossorigin="anonymous">
+
 </head>
 <body>
 <header>
@@ -29,7 +29,7 @@
 			<div class="collapse navbar-collapse" id="navbarExample01">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item active">
-						<a class="nav-link" aria-current="page" href = "index.html">PS</a>
+						<a class="nav-link" aria-current="page" href="index.html">PS</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="student">Student</a>
@@ -68,7 +68,7 @@
 			<div class="d-flex justify-content-center align-items-center h-100">
 				<div class="text-white">
 					<h1 class="mb-3">Student's Portal</h1>
-					<h4 class="mb-3">University of Gda?sk</h4>
+					<h4 class="mb-3">University of Gdansk</h4>
 					<a class="btn btn-outline-light btn-lg" href="#!" role="button"
 					>Perfect place</a
 					>
@@ -78,64 +78,41 @@
 	</div>
 	<!-- Background image -->
 </header>
-	<div class="container my-2">
-	<h1>Professors List</h1>
+<table class="table  table-dark">
+	<thead>
+	<tr>
+		<th scope="col">Id</th>
+		<th scope="col">FirstName</th>
+		<th scope="col">LastName</th>
+		<th scope="col">Email</th>
+		<th scope="col">Degree</th>
+		<th scope="col">Address</th>
 
-	
-	<a th:href = "@{/showNewProfessorForm}" class="btn btn-primary btn-sm mb-3"> Add Professor </a>
-	
-		<table border="1" class = "table table-striped table-responsive-md">
-			<thead>
-				<tr>
-					<th>
-						<a th:href="@{'/pageprofessor/' + ${currentPage} + '?sortField=firstName&sortDir=' + ${reverseSortDir}}">
-							Professor First Name</a>
-					</th>
-					<th>
-					<a th:href="@{'/pageprofessor/' + ${currentPage} + '?sortField=lastName&sortDir=' + ${reverseSortDir}}">
-							Professor Last Name</a>
-					</th>
-					<th>
-					<a th:href="@{'/pageprofessor/' + ${currentPage} + '?sortField=email&sortDir=' + ${reverseSortDir}}">
-							Professor Email</a>
-					</th>
-					<th> Actions </th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="professor : ${listProfessors}">
-					<td th:text="${professor.firstName}"></td>
-					<td th:text="${professor.lastName}"></td>
-					<td th:text="${professor.email}"></td>
-					<td> <a th:href="@{/showFormForUpdateProfessor/{id}(id=${professor.id})}" class="btn btn-primary">Update</a>
-					    <a th:href="@{/deleteProfessor/{id}(id=${professor.id})}" class="btn btn-danger">Delete</a>
-					</td>
-				</tr>
-			</tbody>
-		</table>
-		
-		<div th:if = "${totalPages > 1}">
-			<div class = "row col-sm-10">
-				<div class = "col-sm-2">
-					Total Rows: [[${totalItems}]] 
-				</div>
-				<div class = "col-sm-1">
-					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-						<a th:if="${currentPage != i}" th:href="@{'/pageprofessor/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
-						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
-					</span>
-				</div>
-				<div class = "col-sm-1">
-					<a th:if="${currentPage < totalPages}" th:href="@{'/pageprofessor/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
-					<span th:unless="${currentPage < totalPages}">Next</span>
-				</div>
-				
-				 <div class="col-sm-1">
-    				<a th:if="${currentPage < totalPages}" th:href="@{'/pageprofessor/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
-					<span th:unless="${currentPage < totalPages}">Last</span>
-   				 </div>
-			</div>
-		</div>
-	</div>
+
+		<th scope="col">Delete</th>
+		<th scope="col">Update</th>
+
+
+	</tr>
+	</thead>
+	<tbody>
+	<tr th:each="professor : ${allProfessorsFromDB}">
+		<td th:text="${professor.id}"></td>
+		<td th:text="${professor.firstName}"></td>
+		<td th:text="${professor.lastName}"></td>
+		<td th:text="${professor.email}"></td>
+		<td th:text="${#strings.listJoin(professor.degree, ',')}"></td>
+		<td th:text="${professor.adress.streetnumber} + ', '+ ${professor.adress.postalcode}"></td>
+
+		<td><a th:href="@{/deleteProfessor/{id}(id=${professor.id})}" >Delete</a></td>
+		<td><a th:href="@{/showFormForUpdateProfessor/{id}(id=${professor.id})}">Update</a></td>
+
+	</tr>
+	</tbody>
+</table>
+<center>
+	<h2><a  th:href = "@{/showNewProfessorForm}" color="black"> New Professor</a></h2>
+</center>
+
 </body>
 </html>
