--- a/PSs/src/main/resources/templates/new_group.html
+++ b/PSs/src/main/resources/templates/new_group.html
@@ -2,11 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Group Management System</title>
+    <title>Faculty Management System</title>
+
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
 </head>
 <body>
 <header>
@@ -27,25 +34,37 @@
             <div class="collapse navbar-collapse" id="navbarExample01">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" aria-current="page" href="index.html">PS</a>
+                        <a class="nav-link" aria-current="page" href = "/">PS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="student">Student</a>
+                        <a class="nav-link" href="/student">Student</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="professor">Professor</a>
+                        <a class="nav-link" href="/professor">Professor</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="admin">Admin</a>
+                        <a class="nav-link" href="/admin">Admin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="deansofficeemployee">Deans Office Employee</a>
+                        <a class="nav-link" href="/deansofficeemployee">Deans Office Employee</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="faculty">Faculty</a>
+                        <a class="nav-link" href="/faculty">Faculty</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="adress">Adress</a>
+                        <a class="nav-link" href="/adress">Address</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/grade">Grade</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/group">Group</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/specialisation">Specialisation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/term">Term</a>
                     </li>
                 </ul>
             </div>
@@ -66,7 +85,7 @@
             <div class="d-flex justify-content-center align-items-center h-100">
                 <div class="text-white">
                     <h1 class="mb-3">Student's Portal</h1>
-                    <h4 class="mb-3">University of Gdansk</h4>
+                    <h4 class="mb-3">University of Gda?sk</h4>
                     <a class="btn btn-outline-light btn-lg" href="#!" role="button"
                     >Perfect place</a
                     >
