--- a/PSs/src/main/resources/templates/indexfaculty.html
+++ b/PSs/src/main/resources/templates/indexfaculty.html
@@ -34,25 +34,37 @@
             <div class="collapse navbar-collapse" id="navbarExample01">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item active">
-                        <a class="nav-link" aria-current="page" href="index.html">PS</a>
+                        <a class="nav-link" aria-current="page" href = "/">PS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="student">Student</a>
+                        <a class="nav-link" href="/student">Student</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="professor">Professor</a>
+                        <a class="nav-link" href="/professor">Professor</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="admin">Admin</a>
+                        <a class="nav-link" href="/admin">Admin</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="deansofficeemployee">Deans Office Employee</a>
+                        <a class="nav-link" href="/deansofficeemployee">Deans Office Employee</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="faculty">Faculty</a>
+                        <a class="nav-link" href="/faculty">Faculty</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="adress">Adress</a>
+                        <a class="nav-link" href="/adress">Address</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/grade">Grade</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/group">Group</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/specialisation">Specialisation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/term">Term</a>
                     </li>
                 </ul>
             </div>
@@ -83,72 +95,37 @@
     </div>
     <!-- Background image -->
 </header>
-<div class="container my-2">
-    <h1>Faculties List</h1>
+<table class="table  table-dark">
+    <thead>
+    <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Name</th>
+        <th scope="col">Address</th>
+<!--        <th scope="col">Dean</th>-->
+<!--        <th scope="col">Professors</th>-->
 
 
-    <a th:href="@{/showNewFacultyForm}" class="btn btn-primary btn-sm mb-3"> Add a faculty </a>
+        <th scope="col">Delete</th>
+        <th scope="col">Update</th>
+        <th scope="col">Details</th>
 
-    <table border="1" class="table table-striped table-responsive-md">
-        <thead>
-        <tr>
-            <th>
-                <a th:href="@{'/pagefaculty/' + ${currentPage} + '?sortField=name&sortDir=' + ${reverseSortDir}}">
-                    Name</a>
-            </th>
-            <th>
-                <a th:href="@{'/pagefaculty/' + ${currentPage} + '?sortField=professors&sortDir=' + ${reverseSortDir}}">
-                    Professors</a>
-            </th>
-            <th>
-                <a th:href="@{'/pagefaculty/' + ${currentPage} + '?sortField=address&sortDir=' + ${reverseSortDir}}">
-                    Address</a>
-            </th>
-            <th>
-                <a th:href="@{'/pagefaculty/' + ${currentPage} + '?sortField=dean&sortDir=' + ${reverseSortDir}}">
-                    Dean</a>
-            </th>
-            <th> Actions</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="Faculty : ${listFaculties}">
-            <td th:text="${Faculty.name}"></td>
-            <td th:text="${Faculty.address}"></td>
-            <td th:text="${Faculty.dean}"></td>
-            <td th:text="${Faculty.professors}"></td>
-            <td><a th:href="@{/showFormForUpdateFaculty/{id}(id=${Faculty.id})}" class="btn btn-primary">Update</a>
-                <a th:href="@{/deletePFaculty/{id}(id=${Faculty.id})}" class="btn btn-danger">Delete</a>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-
-    <div th:if="${totalPages > 1}">
-        <div class="row col-sm-10">
-            <div class="col-sm-2">
-                Total Rows: [[${totalItems}]]
-            </div>
-            <div class="col-sm-1">
-					<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-						<a th:if="${currentPage != i}"
-                           th:href="@{'/pagefaculty/' + ${i}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">[[${i}]]</a>
-						<span th:unless="${currentPage != i}">[[${i}]]</span>  &nbsp; &nbsp;
-					</span>
-            </div>
-            <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}"
-                   th:href="@{'/pagefaculty/' + ${currentPage + 1}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Next</a>
-                <span th:unless="${currentPage < totalPages}">Next</span>
-            </div>
-
-            <div class="col-sm-1">
-                <a th:if="${currentPage < totalPages}"
-                   th:href="@{'/pagefaculty/' + ${totalPages}+ '?sortField=' + ${sortField} + '&sortDir=' + ${sortDir}}">Last</a>
-                <span th:unless="${currentPage < totalPages}">Last</span>
-            </div>
-        </div>
-    </div>
-</div>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="faculty : ${listFaculties}">
+        <td th:text="${faculty.id}"></td>
+        <td th:text="${faculty.name}"></td>
+        <td th:text="${faculty.address}"></td>
+<!--        <td th:text="${faculty.dean.firstName}"></td>-->
+<!--        <td th:text="${#strings.listJoin(faculty.professors, ',')}"></td>-->
+        <td><a th:href="@{/deleteFaculty/{id}(id=${faculty.id})}" >Delete</a></td>
+        <td><a th:href="@{/showFormForUpdateFacultyt/{id}(id=${faculty.id})}">Update</a></td>
+        <td><a th:href="@{/faculty/{id}(id=${faculty.id})}">See details</a></td>
+    </tr>
+    </tbody>
+</table>
+<center>
+    <h2><a  th:href = "@{/showNewFacultyForm}" color="black"> New Faculty</a></h2>
+</center>
 </body>
 </html>
