--- a/PSs/src/main/resources/templates/indexprofessor.html
+++ b/PSs/src/main/resources/templates/indexprofessor.html
@@ -29,25 +29,37 @@
 			<div class="collapse navbar-collapse" id="navbarExample01">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item active">
-						<a class="nav-link" aria-current="page" href="index.html">PS</a>
+						<a class="nav-link" aria-current="page" href = "/">PS</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="student">Student</a>
+						<a class="nav-link" href="/student">Student</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="professor">Professor</a>
+						<a class="nav-link" href="/professor">Professor</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="admin">Admin</a>
+						<a class="nav-link" href="/admin">Admin</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="deansofficeemployee">Deans Office Employee</a>
+						<a class="nav-link" href="/deansofficeemployee">Deans Office Employee</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="faculty">Faculty</a>
+						<a class="nav-link" href="/faculty">Faculty</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="adress">Adress</a>
+						<a class="nav-link" href="/adress">Address</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/grade">Grade</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/group">Group</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/specialisation">Specialisation</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/term">Term</a>
 					</li>
 				</ul>
 			</div>
@@ -102,7 +114,7 @@
 		<td th:text="${professor.lastName}"></td>
 		<td th:text="${professor.email}"></td>
 		<td th:text="${#strings.listJoin(professor.degree, ',')}"></td>
-		<td th:text="${professor.adress.streetnumber} + ', '+ ${professor.adress.postalcode}"></td>
+<!--		<td th:text="${professor.adress.streetnumber} + ', '+ ${professor.adress.postalcode}"></td>-->
 
 		<td><a th:href="@{/deleteProfessor/{id}(id=${professor.id})}" >Delete</a></td>
 		<td><a th:href="@{/showFormForUpdateProfessor/{id}(id=${professor.id})}">Update</a></td>
