--- a/PSs/src/main/resources/templates/new_faculty.html
+++ b/PSs/src/main/resources/templates/new_faculty.html
@@ -100,7 +100,7 @@
             <input type="text" th:field="*{name}"
                    placeholder="Faculty Name">
         </label>
-        <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}">tName error</div>
+        <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name error</div>
         <br>
         <input type="text" th:field="*{address}"
                placeholder="Faculty address">
@@ -112,7 +112,6 @@
         </select>
         <br>
         <p></p>
-
 
         <br>
         <button type="submit"> Save Faculty</button>
