--- a/PSs/src/main/resources/templates/indexstudentonspecialisation.html
+++ b/PSs/src/main/resources/templates/indexstudentonspecialisation.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Student on Specialisation Management System</title>
+    <title>Student on Specialization Management System</title>
 
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -50,13 +50,13 @@
                         <a class="nav-link" href="/adress">Address</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/grade">Grade</a>
+                        <a class="nav-link" href="/studentclasses">Grade</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/group">Group</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/specialisation">Specialisation</a>
+                        <a class="nav-link" href="/specialization">Specialization</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/term">Term</a>
@@ -82,7 +82,7 @@
                     <h1 class="mb-3">Student's Portal</h1>
                     <h4 class="mb-3">University of Gdansk</h4>
                     <a class="btn btn-outline-light btn-lg" href="#!" role="button"
-                    >Perfect place</a
+                    >UG shares its knowledge</a
                     >
                 </div>
             </div>
@@ -94,7 +94,7 @@
     <thead>
     <tr>
         <th scope="col">Id</th>
-        <th scope="col">Specialisation</th>
+        <th scope="col">Specialization</th>
         <th scope="col">Year</th>
         <th scope="col">Semester</th>
         <th scope="col">Grade Average</th>
@@ -106,19 +106,19 @@
     </tr>
     </thead>
     <tbody>
-    <tr th:each="studentOnSpecialisation : ${listStudentOnSpecialisations}">
-        <td th:text="${studentOnSpecialisation.id}"></td>
-        <td th:text="${studentOnSpecialisation.specialisation.name}"></td>
-        <td th:text="${studentOnSpecialisation.year}"></td>
-        <td th:text="${studentOnSpecialisation.semester}"></td>
-        <td th:text="${studentOnSpecialisation.gradeAverage}"></td>
-        <td><a th:href="@{/deleteStudentOnSpecialisation/{id}(id=${studentOnSpecialisation.id})}" >Delete</a></td>
-        <td><a th:href="@{/showFormForUpdateStudentOnSpecialisation/{id}(id=${studentOnSpecialisation.id})}">Update</a></td>
+    <tr th:each="studentOnSpecialization : ${listStudentOnSpecializations}">
+        <td th:text="${studentOnSpecialization.id}"></td>
+        <td th:text="${studentOnSpecialization.specialization.name}"></td>
+        <td th:text="${studentOnSpecialization.year}"></td>
+        <td th:text="${studentOnSpecialization.semester}"></td>
+        <td th:text="${studentOnSpecialization.gradeAverage}"></td>
+        <td><a th:href="@{/deleteStudentOnSpecialization/{id}(id=${studentOnSpecialization.id})}" >Delete</a></td>
+        <td><a th:href="@{/showFormForUpdateStudentOnSpecialization/{id}(id=${studentOnSpecialization.id})}">Update</a></td>
     </tr>
     </tbody>
 </table>
 <center>
-<h2><a  th:href = "@{/showNewStudentOnSpecialisationForm}" color="black"> New Student On Specialisation</a></h2>
+<h2><a  th:href = "@{/showNewStudentOnSpecializationForm}" color="black"> New Student On Specialization</a></h2>
 </center>
 
 </body>
