--- a/PSs/src/main/resources/templates/new_professor.html
+++ b/PSs/src/main/resources/templates/new_professor.html
@@ -68,7 +68,7 @@
 					<h1 class="mb-3">Student's Portal</h1>
 					<h4 class="mb-3">University of Gdansk</h4>
 					<a class="btn btn-outline-light btn-lg" href="#!" role="button"
-					>Perfect place</a
+					>UG shares its knowledge</a
 					>
 				</div>
 			</div>
