--- a/PSs/src/main/resources/templates/new_student.html
+++ b/PSs/src/main/resources/templates/new_student.html
@@ -55,13 +55,13 @@
                         <a class="nav-link" href="/adress">Address</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/grade">Grade</a>
+                        <a class="nav-link" href="/studentclasses">Grade</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/group">Group</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/specialisation">Specialisation</a>
+                        <a class="nav-link" href="/specialization">Specialization</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/term">Term</a>
@@ -87,7 +87,7 @@
                     <h1 class="mb-3">Student's Portal</h1>
                     <h4 class="mb-3">University of Gda?sk</h4>
                     <a class="btn btn-outline-light btn-lg" href="#!" role="button"
-                    >Perfect place</a
+                    >UG shares its knowledge</a
                     >
                 </div>
             </div>
