--- a/PSs/src/main/resources/templates/update_specialization.html
+++ b/PSs/src/main/resources/templates/update_specialization.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-	<meta charset="ISO-8859-1">
-	<title>Student Management System</title>
+<meta charset="ISO-8859-1">
+<title>Specialization Management System</title>
 
-	<link rel="stylesheet"
-		  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+<link rel="stylesheet"
+	href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
 <body>
 <header>
@@ -29,7 +29,7 @@
 						<a class="nav-link" aria-current="page" href="index.html">PS</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="student">Student</a>
+						<a class="nav-link" href="student">Specialization</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="professor">Professor</a>
@@ -75,40 +75,42 @@
 	</div>
 	<!-- Background image -->
 </header>
-<div class="container">
-	<h1>Professor Management System</h1>
-	<hr>
-	<h2>Update Professor</h2>
-	<form action="#" th:action="@{/updateProfessor}" th:object="${professor}"
-		  method="POST">
-		<input type="number" th:field="*{id}"
-			   placeholder="Id" >
-		<label>
-			<input type="text" th:field="*{firstName}"
-				   placeholder="Professor First Name">
-		</label>
-		<div th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">FirstName error</div>
-		<label>
-			<input type="text" th:field="*{lastName}"
-				   placeholder="Professor Last Name">
-		</label>
-		<div th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">LastName error</div>
-		<input type="text" th:field="*{email}"
-			   placeholder="Professor Email">
-		<div th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
-		<select th:field="*{degree}">
-			<option th:each="degree : ${degrees}" th:value="${degree}" th:text="${degree}"></option>
-		</select>
-		<select th:field="*{adress}">
-			<option th:each="adress : ${adresses}" th:value="${adress.id}" th:text="${adress.city}"></option>
-		</select>
-		<button type="submit" > Save Professor</button>
-	</form>
+	<div class="container">
+		<h1>Specialization Management System</h1>
+		<hr>
+		<h2>Update Specialization</h2>
+		<form action="#" th:action="@{/updateSpecialization}" th:object="${specialization}"
+			  method="POST">
+			<label>
+				<input type="number" th:field="*{id}"
+					   placeholder="Id">
+			</label>
+			<br>
+			<label>
+				<input type="text" th:field="*{name}"
+					   placeholder="Name">
+			</label>
+
+			<br>
+			<label>
+				<input type="text" th:field="*{description}"
+					   placeholder="Description">
+			</label>
+			<label>
+				<input type="number" th:field="*{maxAmountOfStudent}"
+					   placeholder="maxAmountOfStudents">
+			</label>
+			<label>
+				<input type="number" th:field="*{currentAmountOfStudents}"
+					   placeholder="currentAmountOfStudents">
+			</label>
+			<button type="submit" > Save Specialization</button>
+		</form>
 
 
-	<hr>
-
-	<a th:href = "@{/}"> Back to Professor List</a>
-</div>
+		<hr>
+		
+		<a th:href = "@{/}"> Back to Specialization List</a>
+	</div>
 </body>
 </html>
