--- a/PSs/src/main/resources/templates/new_specialization.html
+++ b/PSs/src/main/resources/templates/new_specialization.html
@@ -100,7 +100,7 @@
     <hr>
     <h2>Save Specialization</h2>
 
-    <form action="#" th:action="@{/addSpecialization}" th:object="${specialization}"
+    <form action="#" th:action="@{/saveSpecialization}" th:object="${specialization}"
           method="POST">
 
      <br>
