--- a/PSs/src/main/resources/templates/show_student.html
+++ b/PSs/src/main/resources/templates/show_student.html
@@ -124,7 +124,7 @@
 				</span></td>
     <td><a th:href="@{/deleteStudent/{id}(id=${student.id})}">Delete</a></td>
     <td><a th:href="@{/showFormForUpdateStudent/{id}(id=${student.id})}">Update</a></td>
-    <td><a th:href="@{/#}">Add a new class</a></td>
+    <td><a th:href="@{/class}">Add new classes</a></td>
 
     </tbody>
 </table>
