--- a/PSs/src/main/resources/templates/indexstudent.html
+++ b/PSs/src/main/resources/templates/indexstudent.html
@@ -117,7 +117,7 @@
         <td th:text="${student.email}"></td>
         <td th:text="${#strings.listJoin(student.degree, ',')}"></td>
         <td th:text="${student.adress}"></td>
-        <td th:text="${student.specialization.name}"></td>
+        <td th:text="${student.specialisationToStr()}"></td>
         <td><a th:href="@{/deleteStudent/{id}(id=${student.id})}" >Delete</a></td>
         <td><a th:href="@{/showFormForUpdateStudent/{id}(id=${student.id})}">Update</a></td>
         <td><a th:href="@{/student/{id}(id=${student.id})}">See details</a></td>
