--- a/PSs/src/main/resources/templates/class_terms.html
+++ b/PSs/src/main/resources/templates/class_terms.html
@@ -2,17 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Faculty Management System</title>
+    <title>Student Management System</title>
 
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -85,7 +80,7 @@
             <div class="d-flex justify-content-center align-items-center h-100">
                 <div class="text-white">
                     <h1 class="mb-3">Student's Portal</h1>
-                    <h4 class="mb-3">University of Gda?sk</h4>
+                    <h4 class="mb-3">University of Gdansk</h4>
                     <a class="btn btn-outline-light btn-lg" href="#!" role="button"
                     >UG shares its knowledge</a
                     >
@@ -95,61 +90,42 @@
     </div>
     <!-- Background image -->
 </header>
-<div class="container">
-    <h1>Class Management System</h1>
-    <hr>
-    <h2>Save Class</h2>
-
-    <form action="#" th:action="@{/addClass}" th:object="${class}"
-          method="POST">
-        <label>
-            <input type="number" th:field="*{id}"
-                   placeholder="Id">
-        </label>
-     <br>
-        <label>
-            <input type="text" th:field="*{name}"
-                   placeholder="Name">
-        </label>
-
-        <br>
-        <label>
-        <input type="text" th:field="*{description}"
-               placeholder="Description">
-        </label>
-        <label>
-            <input type="number" th:field="*{maxAmountOfStudents}"
-                   placeholder="maxAmountOfStudents">
-        </label>
-        <label>
-            <input type="number" th:field="*{currentAmountOfStudents}"
-                   placeholder="currentAmountOfStudents">
-        </label>
-
-        <select th:field="*{terms}" class="form-control" multiple="multiple">
-            <option th:each="term: ${terms}" th:value="${term.id}" th:text="${term.toString()}"></option>
-        </select>
-
-        <select th:field="*{specialization}" class="form-control">
-            <option th:each="spec: ${specs}" th:value="${spec.id}" th:text="${spec.getName()}"></option>
-        </select>
+<table class="table  table-dark">
+    <thead>
+    <tr>
+        <th scope="col">Id</th>
+        <th scope="col">Specialization</th>
+        <th scope="col">Name</th>
+        <th scope="col">Description</th>
+        <th scope="col">Max Amount</th>
+        <th scope="col">Current Amount</th>
+        <th scope="col">Terms</th>
 
 
 
+        <th scope="col">Delete</th>
+        <th scope="col">Update</th>
 
-        <br>
-        <button type="submit"> Save Class</button>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td th:text="${class.id}"></td>
+        <td th:text="${specData}"></td>
+        <td th:text="${class.name}"></td>
+        <td th:text="${class.description}"></td>
 
-        <div th:if="${#fields.hasErrors('*')}">
-            <p th:each="err : ${#fields.errors('*')}" th:text="${err}"></p>
-        </div>
+        <td th:text="${class.maxAmountOfStudents}"></td>
+        <td th:text="${class.currentAmountOfStudents}"></td>
+        <td th:text="${termData}"></td>
+        <td><a th:href="@{/deleteClass/{id}(id=${class.id})}" >Delete</a></td>
+        <td><a th:href="@{/showFormForUpdateClass/{id}(id=${class.id})}">Update</a></td>
+    </tr>
+    </tbody>
+</table>
+<center>
+<h2><a  th:href = "@{/showNewClassForm}" color="black"> New Class</a></h2>
+</center>
 
-    </form>
-
-
-    <hr>
-
-    <a th:href="@{/class}"> Back to Class List</a>
-</div>
 </body>
 </html>
